# osrandom-rust

./: .appveyor.yml  Cargo.toml  README.md  build.rs
librandom/: arc4random.c  cryptgenrandom.c  getrandom.c  secrandomcopybytes.c  urandom.c
src/: lib.rs
tests/: osrandom.rs
